cloudflared.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflared
  template:
    metadata:
      labels:
        app: cloudflared
    spec:
      containers:
        - name: tunnel
          image: cloudflare/cloudflared:latest
          args: ["tunnel", "--protocol", "quic", "run"]
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
            livenessProbe:
              httpGet:
                path: /metrics
                port: 20241
              initialDelaySeconds: 10
              periodSeconds: 30
