backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-backend
  template:
    metadata:
      labels:
        app: portfolio-backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/notseekeru/portfolio-backend:latest
          ports:
            - containerPort: 5000
          livenessProbe:
            tcpSocket:
              port: 5000
          resources:
            limits:
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-backend-service
spec:
  selector:
    app: portfolio-backend
  ports:
    - port: 5000
      targetPort: 5000
