frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-frontend
  template:
    metadata:
      labels:
        app: portfolio-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/notseekeru/portfolio-frontend:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            tcpSocket:
              port: 8080
          resources:
            limits:
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-frontend-service
spec:
  selector:
    app: portfolio-frontend
  ports:
    - port: 8080
      targetPort: 8080
